--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     .order { border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; }
-    button { margin-right: 5px; }
+    select, button { margin-top: 5px; }
   </style>
 </head>
 <body>
@@ -30,6 +30,9 @@
 
     const ordersRef = firebase.database().ref("orders");
 
+    // 狀態選項
+    const statusOptions = ["new", "preparing", "served", "paid"];
+
     // 監聽訂單資料
     ordersRef.on("value", snapshot => {
       const ordersContainer = document.getElementById("orders");
@@ -45,50 +48,51 @@
         const div = document.createElement("div");
         div.classList.add("order");
 
-        // 計算總金額（防止字串相加錯誤）
+        // 計算總金額
         let orderTotal = 0;
         if (order.items) {
           Object.values(order.items).forEach(item => {
-            const price = Number(item.price) || 0;
-            const qty   = Number(item.quantity) || 0;
+            const price = parseFloat(item.price) || 0;
+            const qty   = parseFloat(item.quantity) || 0;
             orderTotal += price * qty;
           });
         }
 
+        // 狀態下拉選單
+        const statusSelect = document.createElement("select");
+        statusOptions.forEach(st => {
+          const option = document.createElement("option");
+          option.value = st;
+          option.textContent = st;
+          if (order.status === st) option.selected = true;
+          statusSelect.appendChild(option);
+        });
+        statusSelect.addEventListener("change", () => {
+          updateOrderStatus(orderId, statusSelect.value);
+        });
+
+        // 刪除按鈕
+        const deleteBtn = document.createElement("button");
+        deleteBtn.textContent = "刪除訂單";
+        deleteBtn.addEventListener("click", () => {
+          deleteOrder(orderId);
+        });
+
         div.innerHTML = `
           <p><b>桌號：</b>${order.table || "未指定"}</p>
           <p><b>時間：</b>${order.time || "未知"}</p>
-          <p><b>狀態：</b>${order.status || "未知"}</p>
           <p><b>總金額：</b>$${orderTotal.toLocaleString()}</p>
-          <button class="status-btn" data-id="${orderId}">更新狀態</button>
-          <button class="delete-btn" data-id="${orderId}">刪除訂單</button>
         `;
 
+        div.appendChild(statusSelect);
+        div.appendChild(deleteBtn);
         ordersContainer.appendChild(div);
-      });
-
-      // 綁定按鈕事件
-      document.querySelectorAll(".status-btn").forEach(btn => {
-        btn.addEventListener("click", () => {
-          const id = btn.dataset.id;
-          const currentStatus = orders[id].status || "new";
-          const nextStatus = getNextStatus(currentStatus);
-          updateOrderStatus(id, nextStatus);
-        });
-      });
-
-      document.querySelectorAll(".delete-btn").forEach(btn => {
-        btn.addEventListener("click", () => {
-          const id = btn.dataset.id;
-          deleteOrder(id);
-        });
       });
     });
 
-    // 狀態更新
+    // 更新訂單狀態
     function updateOrderStatus(orderId, newStatus) {
       firebase.database().ref(`orders/${orderId}/status`).set(newStatus)
-        .then(() => alert(`訂單 ${orderId} 狀態更新為 ${newStatus}`))
         .catch(err => alert("更新失敗：" + err.message));
     }
 
@@ -96,16 +100,8 @@
     function deleteOrder(orderId) {
       if (confirm(`確定刪除訂單 ${orderId} 嗎？`)) {
         firebase.database().ref(`orders/${orderId}`).remove()
-          .then(() => alert(`訂單 ${orderId} 已刪除`))
           .catch(err => alert("刪除失敗：" + err.message));
       }
-    }
-
-    // 狀態循環邏輯
-    function getNextStatus(current) {
-      const flow = ["new", "preparing", "served", "paid"];
-      const idx = flow.indexOf(current);
-      return flow[(idx + 1) % flow.length];
     }
   </script>
 </body>
